--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,15 @@ after_success:
   - docker push bhandarikaran1995/multi-nginx
   - docker push bhandarikaran1995/multi-server
   - docker push bhandarikaran1995/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: 'us-east-1'
+  app: 'multi-docker'
+  env: 'Multi-docker-env'
+  bucket_name: 'elasticbeanstalk-us-east-1-356095541420'
+  bucket_path: 'docker-multi'
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
